--- a/about.html
+++ b/about.html
@@ -14,6 +14,18 @@
 <div class="grid">
 	<div class="col-1-4">
 	<header>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-59323114-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+		
 		<h1><a href="index.html">DAVID SLONE</a></h1>
 		<nav>
 			<ul>
@@ -64,4 +76,5 @@
 
 
 </body>
+
 </html>
